QRList Adjusted and QRStoraLayout more beautiful, i guess